Create Navigation Bar

--- a/First-tailwind-css-website/index.html
+++ b/First-tailwind-css-website/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Used phones in Hyderabad - Grab the deal now!</title>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <h1>
-
-    </h1>
+    <nav class="bg-purple-800 text-white flex justify-between">
+        <ul class="px-28 py-4 flex space-x-11 justify-end">
+            <li>Home</li>
+            <li>About</li>
+            <li>Catalogue</li>
+            <li>Contact Us</li>
+        </ul>
+    </nav>
 </body>
 </html>
