--- a/First-tailwind-css-website/index.html
+++ b/First-tailwind-css-website/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <nav class="bg-purple-800 text-white flex justify-between">
+        <img src="https://randomuser.me/api/portraits/lego/5.jpg" alt="profile picture" class="h-10 pt-3 px-3 rounded-4xl">
         <ul class="px-28 py-4 flex space-x-11 justify-end">
-            <li>Home</li>
-            <li>About</li>
-            <li>Catalogue</li>
-            <li>Contact Us</li>
+            <li class="cursor-pointer">Home</li>
+            <li class="cursor-pointer">About</li>
+            <li class="cursor-pointer">Catalogue</li>
+            <li class="cursor-pointer">Contact Us</li>
         </ul>
     </nav>
 </body>
