--- a/First-tailwind-css-website/index.html
+++ b/First-tailwind-css-website/index.html
@@ -16,5 +16,21 @@
             <li class="cursor-pointer">Contact Us</li>
         </ul>
     </nav>
+    <main>
+        <div class="main bg-fuchsia-100 py-40 pl-9">
+        <div class="text-6xl">
+            The best phones in the town
+        </div>
+            <p class="py-3 px-3 w-1/3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit adipisci animi nihil at, vero ex! Iusto ducimus explicabo, repudiandae beatae expedita saepe earum velit, maxime sequi, voluptatum laborum ipsum accusamus.</p>
+            <div class="button">
+                <button class="bg-purple-800 px-5 mr-5 my-4 py-2 rounded-2xl text-white hover:bg-fuchsia-950 hover:text-lg">
+                    Buy Now
+                </button>
+                <button class="bg-purple-800 px-5 mr-5 my-4 py-2 rounded-2xl text-white hover:bg-fuchsia-950 hover:text-lg">
+                    Contact Us
+                </button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
