--- a/First-tailwind-css-website/index.html
+++ b/First-tailwind-css-website/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <nav class="bg-purple-800 text-white flex justify-between">
-        <img src="https://randomuser.me/api/portraits/lego/5.jpg" alt="profile picture" class="h-10 pt-3 px-3 rounded-4xl">
+        <!-- <img src="https://randomuser.me/api/portraits/lego/5.jpg" alt="profile picture" class="h-10 pt-3 px-3 rounded-4xl"> -->
+         <span class="text-xl flex items-center mx-3 font-bold">PhonesMania</span>
         <ul class="px-28 py-4 flex space-x-11 justify-end">
             <li class="cursor-pointer">Home</li>
             <li class="cursor-pointer">About</li>
@@ -16,8 +17,8 @@
             <li class="cursor-pointer">Contact Us</li>
         </ul>
     </nav>
-    <main>
-        <div class="main bg-fuchsia-100 py-40 pl-9">
+    <main class=" bg-fuchsia-100 flex justify-around">
+        <div class="main bg-fuchsia-100 py-32 pl-9">
         <div class="text-6xl">
             The best phones in the town
         </div>
@@ -31,6 +32,11 @@
                 </button>
             </div>
         </div>
+            <div class="flex items-center pr-32 py-2">
+                <img class="w-[600px] h-auto md:w-[800px] lg:w-[1000px] object-contain"
+            src="https://static.vecteezy.com/system/resources/thumbnails/045/686/506/small_2x/businessman-calling-mobile-3d-character-free-png.png" alt="person wiht phoen">
+            </div>
+        
     </main>
 </body>
 </html>
