Start with basic styling of font and size

--- a/font-and-sizing/index.html
+++ b/font-and-sizing/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Font and Sizing</title>
-    <link href="index.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="bg-red-500 text-white">
-        <h1>Font and sizing</h1>
-    </div>
+    <h1 class="mx-5 my-2 text-2xl font-bold">Heading1</h1> 
+    <h2 class="mx-5 my-2 text-xl font-bold">Heading2</h2> 
+    <h3 class="mx-5 my-2 text-lg font-bold">Heading3</h3> 
+    <h4 class="mx-5 my-2 text-base font-bold">Heading4</h4> 
+    <h5 class="mx-5 my-2 text-sm font-bold">Heading5</h5> 
+    <h6 class="mx-5 my-2 text-xs font-bold">Heading6</h6> 
+<!-- Tailwind CSS does not apply default browser styles to headings; you need to customize them manually. -->
+ <div class="text-center text-3xl tracking-tighter">Lorem ipsum dolor sit amet.</div>
+ <div class="text-right text-3xl tracking-widest">Lorem ipsum dolor sit amet.</div>
+    <div class="mx-5 font-sans">Tailwind CSS</div>
+    <div class="mx-5 font-serif">Tailwind CSS</div>
+    <div class="mx-5 font-mono">Tailwind CSS</div>
 </body>
 </html>
