Practice hover effects

--- a/hover-focus-and-other states/index.html
+++ b/hover-focus-and-other states/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="m-36">
-        <button class="text-sm px-4 py-2 bg-purple-800 text-white rounded-md hover:bg-purple-500 active:bg-purple-600 focus:bg-black">Submit now</button>
+        <button class="text-sm px-4 py-2 bg-purple-900 text-white rounded-md sm:hover:bg-purple-500  lg:hover:bg-fuchsia-800 active:bg-purple-600 focus:outline focus:outline-blue-500 focus:bg-black">Submit now</button>
     </div>
-    <!-- focus represents the state when the element is currently selected to receive inputand active represents the stae when the element is currently being activated by the user -->
+    <!-- focus represents the state when the element is currently selected to receive inputand active represents the stae when the element is currently being activated by the user
+     ailwind uses focus:outline to control the outline property and focus:outline-offset or focus:ring for managing focus styles like shadows and borders.
+    To apply a blue outline on focus, you can use the focus:outline class combined with focus:outline-color -->
 </body>
 </html>
