--- a/create-responsive-designs/index.html
+++ b/create-responsive-designs/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="mx-4 my-4 bg-red-500 sm:bg-yellow-500 lg:bg-slate-800 text-white">
+    <div class="mx-0 px-1 text-xs sm:text-sm bg-red-500 sm:bg-yellow-500 lg:bg-slate-800 text-white">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse repellat ipsa, officiis quibusdam explicabo natus dicta sapiente neque odio dolor, alias quo quisquam repudiandae iste quaerat aperiam! Porro.
     </div>
     
