Change Font Size and Content

--- a/create-responsive-designs/index.html
+++ b/create-responsive-designs/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="mx-0 px-1 text-xs sm:text-sm bg-red-500 sm:bg-yellow-500 lg:bg-slate-800 text-white">
+    <div class="lg:hidden mx-0 px-1 text-xs sm:text-sm bg-red-500 sm:bg-yellow-500 lg:bg-slate-800 text-white">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse repellat ipsa, officiis quibusdam explicabo natus dicta sapiente neque odio dolor, alias quo quisquam repudiandae iste quaerat aperiam! Porro.
+    </div>
+    <div class="hidden lg:block mx-0 px-1 text-xs  bg-red-500 sm:bg-yellow-500 lg:bg-slate-800 text-white">
+        Large Screen!
     </div>
     
 </body>
