--- a/directives/index.html
+++ b/directives/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="m-4 text-sm p-2 bg-red-500 text-white">
+    <!-- <div class="m-4 text-sm p-2 bg-red-500 text-white">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam nam cumque commodi.
 <button type="button" class="btn1">Yellow</button>
 <button type="button" class="text-white bg-green-400 hover:bg-green-500 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:focus:ring-green-900">Green</button>
-    </div>
+    </div> -->
+    <div class="m-4 text-sm p-2 bg-red-500 text-white">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam nam cumque commodi. 
+    <button class="btn1">Click me!</button>
+</div>
 </body>
 </html>
