--- a/microsoft-clone/index.html
+++ b/microsoft-clone/index.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <div class="navbar flex justify-between items-center p-4">
-        <div class="hamburger inline-block p-4 cursor-pointer">
-            <div class="line h-0.5 w-6 my-1 bg-black"></div>
-            <div class="line h-0.5 w-6 my-1 bg-black"></div>
-            <div class="line h-0.5 w-6 my-1 bg-black"></div>
+        <div class="flex justify-center items-center">
+            <div class="hamburger inline-block p-4 cursor-pointer md:hidden">
+                <div class="line h-0.5 w-6 my-1 bg-black"></div>
+                <div class="line h-0.5 w-6 my-1 bg-black"></div>
+                <div class="line h-0.5 w-6 my-1 bg-black"></div>
+            </div>
+            <div class="search md:order-2">Search Icon</div>
         </div>
-
+        <div class="logo text-center md:order-1">Microsoft</div>
+        <div class="cart text-center">Cart Account</div>
     </div>
 </body>
 </html>
